<resources >
    <string name="app_name">AndroidBase</string>

    <string name="main_home">首页</string>
    <string name="main_message">消息</string>
    <string name="main_contact">通讯录</string>
    <string name="main_discover">发现</string>
    <string name="main_about_me">我的</string>


    <string name="toast_search">Search</string>
    <string name="toast_delete">Delete</string>
    <string name="toast_warn">Warn</string>
    <string name="toast_settings">Settings</string>
    <string name="toast_down">Down</string>
    <string name="toast_back">Back</string>

    <string name="add_to_cart">加入购物车</string>
    <string name="end_view_text">猜你喜欢</string>

</resources>
