<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.google.android.material.appbar.AppBarLayout-->
        <!--android:id="@+id/layout_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<androidx.appcompat.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:logo="@mipmap/ic_launcher"-->
            <!--app:subtitle="子标题"-->
            <!--app:title="标题"/>-->

        <!--app:layout_scrollFlags="scroll|enterAlways|snap"-->

    <!--androidx下的Toolbar坑太多谨慎  https://www.cnblogs.com/wenhanxiao/archive/2019/03/11/10513498.html-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>
    <!--</com.google.android.material.appbar.AppBarLayout>-->

    <com.java.base.views.main.AlphaRadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px150"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.java.base.views.main.AlphaRadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/main_message"
            android:textColor="@color/dimgrey"
            android:textSize="13sp"
            app:icon_unselected="@drawable/bottom_message"
            app:color_selected="@color/green"
            app:icon_selected="@drawable/bottom_message_green"
            app:icon_height_default="25dp"
            app:icon_width_default="25dp" />

        <com.java.base.views.main.AlphaRadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/main_contact"
            android:textColor="@color/dimgrey"
            android:textSize="13sp"
            app:icon_unselected="@drawable/bottom_contact"
            app:color_selected="@color/green"
            app:icon_selected="@drawable/bottom_contact_green"
            app:icon_height_default="25dp"
            app:icon_width_default="25dp" />

        <com.java.base.views.main.AlphaRadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/main_discover"
            android:textColor="@color/dimgrey"
            android:textSize="13sp"
            app:icon_unselected="@drawable/bottom_discover"
            app:color_selected="@color/green"
            app:icon_selected="@drawable/bottom_discover_green"
            app:icon_height_default="25dp"
            app:icon_width_default="25dp" />

        <com.java.base.views.main.AlphaRadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/main_about_me"
            android:textColor="@color/dimgrey"
            android:textSize="13sp"
            app:icon_unselected="@drawable/bottom_me"
            app:color_selected="@color/green"
            app:icon_selected="@drawable/bottom_me_green"
            app:icon_height_default="25dp"
            app:icon_width_default="25dp" />
    </com.java.base.views.main.AlphaRadioGroup>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/radio_group"
        android:background="@color/darkgrey" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_above="@id/line"/>

</RelativeLayout>
